[metadata]
name = clutui
version = 1.0.1.5600
author = ZZBuAoYe
author_email = zzbuaoye@gmail.com
description = 一个现代化的PyQt5 UI框架
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/buaoyezz/PyQt-ClutUI
project_urls =
    Bug Tracker = https://github.com/buaoyezz/PyQt-ClutUI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    PyQt5>=5.15.0

[options.packages.find]
where = src 